# projectile-motion

./: .gitignore  README.md  pyproject.toml
src/projectile_motion/: __main__.py
src/projectile_motion/presenter/: descriptions.py  plots.py
src/projectile_motion/solver/: motion.py  quadratic.py  solution.py
tests/: test_always_pass.py  test_quadratic_solver.py
