[tool.poetry]
name = "projectile-motion"
version = "0.1.0"
description = "Calculation and plotting for projectile motion physics exercises."
authors = ["mikegorski <mike.gorski96@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "projectile_motion", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.8"
cyclopts = "^2.2.0"
plotille = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.2.1"
pyright = "^1.1.350"
pre-commit = "^3.5.0"

[tool.poetry.scripts]
throw = "projectile_motion.__main__:app"

[tool.ruff]
line-length = 120
select = ["F", "E", "W", "I001"]

[tool.pyright]
venvPath = "C:\\Users\\mikeg\\AppData\\Local\\pypoetry\\Cache\\virtualenvs"
venv = "projectile-motion-Nelc1kr0-py3.11"

